# ado-asana-sync

./: .auto-claude-security.json  .auto-claude-status  .changelog.json  .claude_settings.json  .dockerignore  .editorconfig  .env.example  .gitignore  .goreleaser.yml  .hadolint.yaml  .pr_agent.toml  .pylintrc  .sonarcloud.properties  .whitesource  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  GitVersion.yml  LICENSE  README.md  ado_asana_sync.py  compose.yml  go.mod  go.sum  makefile  projects.json.example  pyproject.toml  renovate.json  requirements.test.txt  requirements.txt  sonar-project.properties  test_ado_asana_sync.py  tox.ini
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  claude.yml  codeql.yml  opencode.yml  pragent.yml  release.yml  sync-requirements.yml
.spec-kit/memory/: constitution.md  constitution_update_checklist.md
.spec-kit/scripts/: check-task-prerequisites.sh  common.sh  create-new-feature.sh  get-feature-paths.sh  setup-plan.sh  update-agent-context.sh
.spec-kit/specs/001-due-dates-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.spec-kit/templates/: plan-template.md  tasks-template.md
ado_asana_sync/: ado_asana_sync.py
ado_asana_sync/database/: __init__.py  connection.py  database.py  migrations.py  tinydb_migration.py
ado_asana_sync/sync/: __main__.py  ado_parser.py  app.py  asana.py  asana_client.py  dry_run.py  group_member_cache.py  matching.py  pr_asana_helpers.py  pr_processor.py  pr_sync_core.py  pull_request_item.py  pull_request_sync.py  sync.py  task_factory.py  task_item.py  utils.py
ado_asana_sync/utils/: date.py  logging_tracing.py  utils.py
adoasanasync/: __main__.py  sync.py
cmd/ado-asana-sync/: dockerfile  main.go
cmd/gotemplate/: main.go
data/: projects.json.example
deploy/: .env.example  compose.yml
deploy/collector/: config.yml
docs/: TESTING_EXAMPLES.md
internal/ado/: ado.go
internal/version/: version.go
pkg/logging/: logging.go
pkg/tracing/: tracing.go
scripts/: __init__.py  quality.py  validate_asana_users.py
specs/001-delta-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-delta-sync/checklists/: requirements.md
tests/: test_delta_sync_integration.py  test_delta_sync_unit.py
tests/database/: __init__.py  test_database.py
tests/e2e/: _shared.py  test_e2e_pull_requests.py  test_e2e_sync.py  test_e2e_work_items.py
tests/scripts/: test_validate_asana_users.py
tests/sync/: test_app.py  test_app_database.py  test_cross_project_contamination.py  test_due_date_integration.py  test_due_date_utils.py  test_group_member_cache.py  test_group_reviewer.py  test_main.py  test_pagination.py  test_pr_dry_run.py  test_pr_id_title_mismatch.py  test_pull_request_item.py  test_pull_request_sync.py  test_runtime_modes.py  test_sync.py  test_sync_integration.py  test_tag_functions.py  test_task_item.py
tests/utils/: test_date.py  test_github_actions_version_pins.py  test_helpers.py  test_logging_tracing.py  test_utils.py  test_uv_security_config.py
