[tool.poetry]
name = "ado-asana-sync"
version = "0.0.0-dev"
description = "Tool to sync work items and pull requests from Azure DevOps to Asana"
authors = ["Dan Anstis <dan@bsod.co.nz>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ado_asana_sync" }]

[tool.poetry.dependencies]
python = "^3.10"
asana = "^5.0.3"
azure-devops = "^7.1.0b3"
tinydb = "^4.8.0"
pytz = ">=2023.3,<2026.0"
azure-monitor-opentelemetry = "^1.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
flake8 = ">=6.1,<8.0"
mypy = "^1.5.1"
pylint = ">=2.17.5,<4.0.0"
pytest-cov = ">=4.1,<7.0"
pytest = ">=7.4,<9.0"
tox = "^4.9"
black = ">=23.7,<26.0"
mdformat = "^0.7.0"
mdformat-gfm = "^0.3.0"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
